# anz-fs-ai-poc-skeleton

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/corpus/: complaints_handling_procedure.md  fees_and_charges.md  home_loan_product_guide.md
data/golden_set/: cases.json
docs/: ARTICLE_MAP.md  CORPUS_CONTRACT.md  GUIDE.md
scripts/: run_demo.py  run_eval.py
src/anz_fs_poc/: __init__.py  config.py  models.py  pipeline.py  prompt_pack.py
src/anz_fs_poc/control_plane/: audit.py  auth.py  hitl.py  pii.py  policy.py  validator.py
src/anz_fs_poc/deterministic/: __init__.py  fees.py
src/anz_fs_poc/eval/: runner.py
src/anz_fs_poc/providers/: __init__.py  base.py  mock.py
src/anz_fs_poc/rag/: corpus.py  retriever.py
tests/: test_skeleton.py
